# periscope

./: Cargo.toml  README.md
client/: Cargo.toml  build.rs
client/src/: lib.rs  main.rs
common/: Cargo.toml  build.rs
common/src/: grpc.rs  lib.rs
porcoc/: Cargo.toml  build.rs
porcoc/src/: grpc.rs  lib.rs  main.rs
porcod/: Cargo.toml  build.rs
porcod/src/: lib.rs  main.rs  tls.rs  webserver.rs
porcod/src/grpc/: inner.rs  mod.rs
proto/: common.proto  inner.proto
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs
server/src/grpc/: inner.rs  mod.rs
server/src/webserver/: mod.rs  tokiort.rs
