[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5" }
hyper = { version = "1.5" }
http = { version = "1.2" }
http-body-util = { version = "0.1" }
pin-project-lite = { version = "0.2" }
prost = { version = "0.13" }
reqwest = { version = "0.12" }
thiserror = { version = "2.0" }
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.12" }
tonic-build = { version = "0.12" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
