[workspace]
resolver = "2"
members = ["porcoc", "porcod", "common"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5" }
common = { path = "./common" }
hyper = { version = "1.5" }
hyper-util = { version = "0.1" }
http = { version = "1.2" }
http-body-util = { version = "0.1" }
pin-project-lite = { version = "0.2" }
prost = { version = "0.13" }
regex = { version = "1.11" }
reqwest = { version = "0.12" }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = { version = "2.2" }
thiserror = { version = "2.0" }
tokio = { version = "1.42" }
tokio-rustls = { version = "0.26" }
tokio-stream = { version = "0.1" }
tonic = { version = "0.12" }
tonic-build = { version = "0.12" }
tower = { version = "0.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
