[package]
name = "periscope-client"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
prost = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
tonic-build = { workspace = true }
