[package]
name = "periscope-server"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hyper = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
pin-project-lite = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
tonic-build = { workspace = true }
